--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "koa": "^2.4.1",
     "raw-body": "^2.3.2",
     "request": "^2.83.0",
-    "sha1": "^1.1.1"
+    "sha1": "^1.1.1",
+    "xml2js": "^0.4.19"
   }
 }
