--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "ejs": "^2.5.7",
+    "express": "^4.16.2",
     "heredoc": "^1.3.1",
     "koa": "^2.4.1",
     "raw-body": "^2.3.2",
