--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.2",
     "heredoc": "^1.3.1",
     "koa": "^2.4.1",
+    "lodash": "^4.17.4",
     "raw-body": "^2.3.2",
     "request": "^2.83.0",
     "sha1": "^1.1.1",
