--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.5.1",
+    "crypto": "^1.0.1",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "heredoc": "^1.3.1",
     "koa": "^2.4.1",
+    "koa-static": "^4.0.2",
+    "koa-static-cache": "^5.1.1",
     "lodash": "^4.17.4",
     "raw-body": "^2.3.2",
     "request": "^2.83.0",
